Se agregaron validaciones de existencia en la base de datos para nuevos usuarios

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-PORT = 3000
+PORT = 3001
 
 
-DB_HOST = "localhost"
+DB_HOST = "127.0.0.1"
 DB_USER = "root"
-DB_PASSWORD = "050604?UrieL"
-DB_DATABASE = ""
+DB_PASSWORD = "050604?UrieL1"
+DB_DATABASE = "TaskList"
 DB_PORT = 3306
 DB_MULTIPLE_STATEMENTS = false
